--- a/index.html
+++ b/index.html
@@ -1,106 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>AI Trading Strategy Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Trading Dashboard</title>
   <style>
-    body { margin: 0; background: #181a20; color: #fff; font-family: Arial, sans-serif; }
-    .dashboard-grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 48vh 48vh;
-      gap: 2vh 2vw;
-      height: 98vh;
-      width: 98vw;
-      margin: 1vh auto;
-    }
-    .widget-container {
-      background: #23272f;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      height: 100%;
-      width: 100%;
-      min-width: 320px;
-    }
+    body { font-family: Arial, sans-serif; margin: 40px; background: #f8f8f8; }
+    h1 { color: #333; }
+    #trade-log { background: #fff; border: 1px solid #ccc; padding: 20px; max-width: 600px; margin-top: 20px; }
+    .trade-entry { border-bottom: 1px solid #eee; padding: 10px 0; }
+    .trade-entry:last-child { border-bottom: none; }
+    #refresh-btn { margin-top: 20px; }
   </style>
 </head>
 <body>
-  <div class="dashboard-grid">
-    <!-- Advanced Chart Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-        {
-          "width": "100%",
-          "height": "100%",
-          "symbol": "NASDAQ:AAPL",
-          "interval": "15",
-          "timezone": "Etc/UTC",
-          "theme": "dark",
-          "style": "9",
-          "locale": "en",
-          "allow_symbol_change": true,
-          "save_image": false,
-          "calendar": true,
-          "studies": ["STD;Bollinger_Bands", "STD;RSI"],
-          "support_host": "https://www.tradingview.com"
-        }
-        </script>
-      </div>
-    </div>
-    <!-- Screener Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
-        {
-          "width": "100%",
-          "height": "100%",
-          "defaultColumn": "overview",
-          "defaultScreen": "most_capitalized",
-          "market": "us",
-          "showToolbar": true,
-          "colorTheme": "dark",
-          "locale": "en"
-        }
-        </script>
-      </div>
-    </div>
-    <!-- Symbol Info Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-info.js" async>
-        {
-          "symbol": "NASDAQ:AAPL",
-          "width": "100%",
-          "locale": "en",
-          "colorTheme": "dark",
-          "isTransparent": false
-        }
-        </script>
-      </div>
-    </div>
-    <!-- Economic Calendar Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-events.js" async>
-        {
-          "width": "100%",
-          "height": "100%",
-          "locale": "en",
-          "importanceFilter": "2,3",
-          "currencyFilter": "USD,EUR,JPY,GBP,ILS",
-          "colorTheme": "dark",
-          "isTransparent": false
-        }
-        </script>
-      </div>
-    </div>
+  <h1>AI Trading Dashboard</h1>
+  <button id="refresh-btn">Refresh Trade Log</button>
+  <div id="trade-log">
+    <em>Loading trade log...</em>
   </div>
+  <script>
+    async function fetchTradeLog() {
+      const res = await fetch('/api/trade_log');
+      if (res.ok) {
+        const trades = await res.json();
+        const logDiv = document.getElementById('trade-log');
+        if (trades.length === 0) {
+          logDiv.innerHTML = '<em>No trades yet.</em>';
+        } else {
+          logDiv.innerHTML = trades.map(trade =>
+            `<div class="trade-entry">
+              <strong>${trade.timestamp}</strong>: ${trade.action} ${trade.symbol} @ ${trade.price}
+            </div>`
+          ).join('');
+        }
+      } else {
+        document.getElementById('trade-log').innerHTML = '<em>Error loading trade log.</em>';
+      }
+    }
+    document.getElementById('refresh-btn').onclick = fetchTradeLog;
+    fetchTradeLog();
+  </script>
 </body>
 </html>
