--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>AI Trading Strategy Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { margin: 0; background: #181a20; color: #fff; font-family: Arial, sans-serif; }
+    body {
+      margin: 0;
+      background: #181a20;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
     .dashboard-grid {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
@@ -19,86 +24,6 @@
       background: #23272f;
       border-radius: 10px;
       overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-      height: 100%;
-      width: 100%;
-      min-width: 320px;
-      position: relative;
-      padding: 16px;
-    }
-    .recommendation-list pre { background: #181a20; color: #fff; }
-    .trade-action-btn { margin: 8px 0; }
-    #trade-log-table {
-      width: 100%;
-      color: #fff;
-      background: #181a20;
-      border-collapse: collapse;
-      max-height: 35vh;
-      overflow-y: auto;
-      display: block;
-    }
-    #trade-log-table thead, #trade-log-table tbody {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
-    }
-  </style>
-</head>
-<body>
-  <div class="dashboard-grid">
-    <!-- Advanced Chart Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-        {
-          "width": "100%",
-          "height": "100%",
-          "symbol": "NASDAQ:AAPL",
-          "interval": "15",
-          "timezone": "Etc/UTC",
-          "theme": "dark",
-          "style": "9",
-          "locale": "en",
-          "allow_symbol_change": true,
-          "save_image": false,
-          "calendar": true,
-          "studies": ["STD;Bollinger_Bands", "STD;RSI"],
-          "support_host": "https://www.tradingview.com"
-        }
-        </script>
-      </div>
-    </div>
-    <!-- Screener Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
-        {
-          "width": "100%",
-          "height": "100%",
-          "defaultColumn": "overview",
-          "defaultScreen": "most_capitalized",
-          "market": "us",
-          "showToolbar": true,
-          "colorTheme": "dark",
-          "locale": "en"
-        }
-        </script>
-      </div>
-    </div>
-    <!-- Symbol Info Widget -->
-    <div class="widget-container">
-      <div class="tradingview-widget-container">
-        <div class="tradingview-widget-container__widget"></div>
-        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-info.js" async>
-        {
-          "symbol": "NASDAQ:AAPL",
-          "width": "100%",
-          "locale": "en",
-          "colorTheme": "dark",
-          "isTransparent": false
-        }
-        </script>
-      </div>
-    </
+      box-shadow: 0 2px 10px rgba
+
+    
