--- a/static/index.html
+++ b/static/index.html
@@ -72,10 +72,51 @@
       margin-bottom: 10px;
       font-size: 1.1rem;
     }
+    #login-modal {
+      position: fixed;
+      top: 0; left: 0; width: 100vw; height: 100vh;
+      background: rgba(0,0,0,0.8);
+      display: flex; align-items: center; justify-content: center;
+      z-index: 1000;
+    }
+    #login-box {
+      background: #23272f;
+      padding: 32px 24px;
+      border-radius: 10px;
+      box-shadow: 0 2px 24px rgba(0,0,0,0.7);
+      display: flex;
+      flex-direction: column;
+      min-width: 320px;
+    }
+    #login-box input {
+      margin-bottom: 16px;
+      padding: 8px;
+      border-radius: 4px;
+      border: none;
+      font-size: 1rem;
+    }
+    #login-box button {
+      margin-top: 8px;
+    }
+    #login-error {
+      color: #ff4d4d;
+      margin-bottom: 8px;
+      font-size: 1rem;
+    }
   </style>
 </head>
 <body>
-  <div class="dashboard-grid">
+  <div id="login-modal">
+    <form id="login-box" onsubmit="return false;">
+      <h2>Login Required</h2>
+      <div id="login-error"></div>
+      <input type="text" id="login-username" placeholder="Username" autocomplete="username" required />
+      <input type="password" id="login-password" placeholder="Password" autocomplete="current-password" required />
+      <input type="text" id="login-otp" placeholder="Authenticator Code" autocomplete="one-time-code" required />
+      <button id="login-btn">Log In</button>
+    </form>
+  </div>
+  <div class="dashboard-grid" style="filter: blur(4px);" id="dashboard-content">
     <!-- Advanced Chart Widget -->
     <div class="widget-container">
       <div class="tradingview-widget-container">
@@ -170,15 +211,16 @@
   </div>
 
 <script>
-  const fetchBtn = document.getElementById('fetch-trades-btn');
-  const executeBtn = document.getElementById('execute-trades-btn');
-  const recommendationsPre = document.getElementById('recommendations');
-  const tradeLogBody = document.getElementById('trade-log-body');
-  let currentRecommendations = [];
+  let accessToken = null;
+
+  function setAuthHeader(headers={}) {
+    if (accessToken) headers['Authorization'] = `Bearer ${accessToken}`;
+    return headers;
+  }
 
   async function updateAccountInfo() {
     try {
-      const res = await fetch('http://localhost:8000/account_info');
+      const res = await fetch('http://localhost:8000/account_info', {headers: setAuthHeader()});
       if (!res.ok) throw new Error('Failed to fetch account info');
       const data = await res.json();
       document.getElementById('account-value').textContent = `$${parseFloat(data.equity).toFixed(2)}`;
@@ -191,7 +233,7 @@
 
   async function updateAIActionLog() {
     try {
-      const res = await fetch('http://localhost:8000/ai_action_log');
+      const res = await fetch('http://localhost:8000/ai_action_log', {headers: setAuthHeader()});
       if (!res.ok) throw new Error('Failed to fetch AI action log');
       const data = await res.json();
       if (data.log && data.log.length > 0) {
@@ -206,17 +248,18 @@
     }
   }
 
-  fetchBtn.addEventListener('click', async () => {
+  document.getElementById('fetch-trades-btn').addEventListener('click', async () => {
+    const recommendationsPre = document.getElementById('recommendations');
     recommendationsPre.textContent = 'Fetching trade ideas...';
     try {
-      const res = await fetch('http://localhost:8000/get_trade_ideas');
+      const res = await fetch('http://localhost:8000/get_trade_ideas', {headers: setAuthHeader()});
       if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
       const data = await res.json();
-      currentRecommendations = data.trades || [];
-      if (currentRecommendations.length === 0) {
+      window.currentRecommendations = data.trades || [];
+      if (window.currentRecommendations.length === 0) {
         recommendationsPre.textContent = 'No trade ideas received.';
       } else {
-        recommendationsPre.textContent = JSON.stringify(currentRecommendations, null, 2);
+        recommendationsPre.textContent = JSON.stringify(window.currentRecommendations, null, 2);
       }
     } catch (err) {
       recommendationsPre.textContent = `Error fetching trade ideas: ${err.message}`;
@@ -225,8 +268,9 @@
     updateAccountInfo();
   });
 
-  executeBtn.addEventListener('click', async () => {
-    if (currentRecommendations.length === 0) {
+  document.getElementById('execute-trades-btn').addEventListener('click', async () => {
+    const tradeLogBody = document.getElementById('trade-log-body');
+    if (!window.currentRecommendations || window.currentRecommendations.length === 0) {
       alert('No trade recommendations to execute. Please fetch trade ideas first.');
       return;
     }
@@ -234,8 +278,8 @@
     try {
       const res = await fetch('http://localhost:8000/execute_trades', {
         method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ trades: currentRecommendations }),
+        headers: Object.assign({'Content-Type': 'application/json'}, setAuthHeader()),
+        body: JSON.stringify({ trades: window.currentRecommendations }),
       });
       if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
       const data = await res.json();
@@ -262,9 +306,49 @@
     updateAccountInfo();
   });
 
-  // Initial load
-  updateAccountInfo();
-  updateAIActionLog();
+  async function tryLogin(username, password, otp) {
+    const errorDiv = document.getElementById('login-error');
+    errorDiv.textContent = '';
+    try {
+      const formData = new FormData();
+      formData.append('username', username);
+      formData.append('password', password);
+      formData.append('otp', otp);
+      const res = await fetch('http://localhost:8000/login', {
+        method: 'POST',
+        body: formData
+      });
+      if (!res.ok) {
+        const data = await res.json();
+        errorDiv.textContent = data.detail || 'Login failed';
+        return false;
+      }
+      const data = await res.json();
+      accessToken = data.access_token;
+      document.getElementById('login-modal').style.display = 'none';
+      document.getElementById('dashboard-content').style.filter = 'none';
+      updateAccountInfo();
+      updateAIActionLog();
+      return true;
+    } catch (err) {
+      errorDiv.textContent = 'Login failed: ' + err.message;
+      return false;
+    }
+  }
+
+  document.getElementById('login-btn').addEventListener('click', async (e) => {
+    e.preventDefault();
+    const username = document.getElementById('login-username').value;
+    const password = document.getElementById('login-password').value;
+    const otp = document.getElementById('login-otp').value;
+    await tryLogin(username, password, otp);
+  });
+
+  // Autofocus on username input
+  document.getElementById('login-username').focus();
+
+  // Prevent dashboard access until login
+  document.getElementById('dashboard-content').style.pointerEvents = 'none';
 </script>
 
 </body>
